# ChangeLog for x11-wm/fluxbox
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/fluxbox/ChangeLog,v 1.335 2015/05/06 11:05:47 titanofold Exp $

*fluxbox-1.3.7-r1 (06 May 2015)

  06 May 2015; Aaron W. Swenson <titanofold@gentoo.org>
  +fluxbox-1.3.7-r1.ebuild, metadata.xml:
  Fix bug 547990. Thanks to Daniel Campbell for testing.

  30 Apr 2015; Jeroen Roovers <jer@gentoo.org> fluxbox-1.3.6-r1.ebuild:
  Stable for HPPA (bug #541526).

  29 Apr 2015; Jeroen Roovers <jer@gentoo.org> fluxbox-1.3.6-r1.ebuild:
  Stable for PPC64 (bug #541526).

*fluxbox-1.3.7 (22 Mar 2015)

  22 Mar 2015; Aaron W. Swenson <titanofold@gentoo.org> +fluxbox-1.3.7.ebuild:
  Version bump fixes bug 539348. Thanks Daniel Campbell.

  20 Mar 2015; Justin Lecher <jlec@gentoo.org> files/fluxbox.desktop:
  Fix desktop file

  28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fluxbox-1.3.5.ebuild:
  Stable for ia64, wrt bug #536086

  27 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fluxbox-1.3.5.ebuild:
  Stable for sparc, wrt bug #536086

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fluxbox-1.3.5.ebuild:
  Stable for alpha, wrt bug #536086

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> fluxbox-1.3.5.ebuild:
  Stable for ppc64, wrt bug #536086

  28 Jan 2015; Agostino Sarubbo <ago@gentoo.org> fluxbox-1.3.5.ebuild:
  Stable for ppc, wrt bug #536086

  27 Jan 2015; Ian Delaney <idella4@gentoo.org> fluxbox-1.3.5-r1.ebuild,
  fluxbox-1.3.6-r1.ebuild:
  Set correct fix to bug #537356

  26 Jan 2015; Ian Delaney <idella4@gentoo.org> -fluxbox-1.3.6.ebuild,
  files/1.3.5-generate_menu-printf-fix.patch, fluxbox-1.3.5-r1.ebuild,
  fluxbox-9999.ebuild:
  update patch with final form from upstream, add missed addition from bug
  537356 to -1.3.5-r1, full update to live ebuild from patch from same bug,
  remove broken 1.3.6 ebuild, fixes Bugs 537356, 536370 by maintainers

  26 Jan 2015; Agostino Sarubbo <ago@gentoo.org> fluxbox-1.3.5.ebuild: