@@ -3,9 +3,10 @@ DEPEND=!!<=x11-misc/fbdesk-1.2.1 !!<=x11-misc/fluxconf-0.9.9 !!<x11-themes/fluxb
 DESCRIPTION=Fluxbox is an X11 window manager featuring tabs and an iconbar
 EAPI=5
 HOMEPAGE=http://www.fluxbox.org
-IUSE=nls xinerama bidi +truetype +imlib +slit +toolbar vim-syntax
+IUSE=nls xinerama bidi +truetype +imlib +slit +systray +toolbar vim-syntax
 LICENSE=MIT
 RDEPEND=!!<=x11-misc/fbdesk-1.2.1 !!<=x11-misc/fluxconf-0.9.9 !!<x11-themes/fluxbox-styles-fluxmod-20040809-r1 bidi? ( >=dev-libs/fribidi-0.19.2 ) imlib? ( >=media-libs/imlib2-1.2.0[X] ) truetype? ( media-libs/freetype ) vim-syntax? ( app-vim/fluxbox-syntax ) x11-libs/libXext x11-libs/libXft x11-libs/libXpm x11-libs/libXrandr x11-libs/libXrender xinerama? ( x11-libs/libXinerama ) || ( x11-misc/gxmessage x11-apps/xmessage )
+REQUIRED_USE=systray? ( toolbar )
 SLOT=0
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	git-2	e28f0d8a9b321431b1e699782851b827	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	prefix	21058c21ca48453d771df15500873ede	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=c2dead65ef7010acb3d73ce44e1f65b3
+_md5_=28a1f701c7199cdc3a1021657c73c9b6
