@@ -19,13 +19,13 @@ EBUILD fluxbox-1.3.5.ebuild 3075 SHA256 1bca49230ae8f60ecc51ff604b5e956a2d28024c
 EBUILD fluxbox-1.3.6-r1.ebuild 3277 SHA256 5f7276d3294c94850c2351461476a9f22aca811367986cb81c2f06b8e8b93235 SHA512 38dde0ae7172bef2f0bce48756fa35c77b91440875b4d22e50ef6bb8706b3f5f8786d87ed2f06cbbd65a6a0f3c261ad2c2abee7db8203d8b6ffbeb5aec0841c5 WHIRLPOOL d33de9c48979151716013dab18fb42792131e1d63baf447cf891254b7ad863291d1550933b96bf507d5d70af6f6ca6a12ede945d9acc41455ca242a1dccff149
 EBUILD fluxbox-1.3.7-r1.ebuild 3310 SHA256 09cf6cef708d78fbf6f1f012664f6156045954262b589c91492abbc015b90962 SHA512 03a9dec186503441fcdc777cb394af57a4e3dbea2b92f18511b21a79e7b38af38a951d690e4a9049b0951fbdc914012001f7aeda0f41e4561d203488cef5e765 WHIRLPOOL a0473867d75fc68349f6faac8a3fbe7fd5e0570e299ee80c5fab6311048b5a582d73b3b091d582eb53acdc21e07d1e9bd6e8f7d32fd0bc465a433e9a0cb15cdf
 EBUILD fluxbox-1.3.7.ebuild 3135 SHA256 838dcc5532f343cabc0ff57fa26efb410856f518cd728472f1c543c8a5e4c9f0 SHA512 f75ffc1a4f3274be805fb51530aa250f6419a4dd0130233e893625baee89276465ed87e426b3f9e9bee652d8b00cb667466f0d8229b7af88893877e5500ca3f2 WHIRLPOOL 061615df89ed40f1b3d53ed778f9f1787e66405d735b4919ed07e4cd0b353cc2e59dc30672839c48f91340a6d0d6c2b1f954b486d9f575b0c5a62a806d1f1903
-EBUILD fluxbox-9999.ebuild 3089 SHA256 d21eb8f4d0b5ac2b1c9e9355906b7295b36a2e1c4fd748df1c94f9fcf8d1599d SHA512 d7434517dab3cb173cce62ab0df6aac8854052680bf1c08a5d49ea0eab6d0993306ddb95a5fcf07d6dfd323e1110c75cf801d0f09fe053c7a6fbdf896620c4d7 WHIRLPOOL 2eba3fd26c2cb2f78e455ad84c70787f93884347e04d897b475532e52d91f5241610b9eed322ed2630cda1b870395d1d9bebddc1f48a13defbb6c0a51d8e4339
-MISC ChangeLog 60144 SHA256 fa40b9a0d2d7cf874b24aa3c7da5311e4a09317c7475280fb8a4f92a28ff8cda SHA512 19d77b445be6f7ce1f7e2abc8e27b34978e9f36aa2715d8661230441bd42a3c87476c3ff6bf4f8148c31d4ecd6b3143db8462e8a9198dd12ca1804020ec320d2 WHIRLPOOL 64b01427dd9966f059ba26be62402ac7872e8c697a1943d977b6dd1116fa3b7b2bc77f63ca47ec40ffdf2533e36ef2ade17bb3b707c782b0b59875a377e11db3
+EBUILD fluxbox-9999.ebuild 3117 SHA256 15c38b1bdf3725f805d4eaf1b331b21816fc30dc99e48e337f822286a7f55e60 SHA512 b7658e91356d5d71f0c4829f27d35f6dd892467398e3e1574d8884f8cbc4e528136eff96493351cbb3553dc73a356b1d542ba0c6781d7d6af66b217206177a31 WHIRLPOOL 1d0ed8e5e1d3e223c72e69035af94a3ba101e1c06216cc6223c91eb9ef6b563c190296360e5c83c28f22bfc20091ba7d3dcbd2920d7378054fcf40654cf9ea2b
+MISC ChangeLog 60240 SHA256 3f9a2ee98f6ac08654ada80c15a9709b764cf3ccca4f09bcc461cca7be937134 SHA512 944e68f839759b258d95ad79e8268fd9a0b78f052b13d230dbd7b9f831716823b86d4542df62740b7358c28aa79e9d3ed071d09a2ed62c7594c2bd3f92bb14e5 WHIRLPOOL b771e814c3bbd5a9a2b145ef428cf99dc86c097c6d4e40b0fb7c877f402ca992ec2927a984dd637740d60e6e646a2368d17df1740000a0debb1836c69fa8b481
 MISC metadata.xml 1114 SHA256 81d6c8abe509b4bfd67acbe9728aaf7740b5c88899980a55f08a1fe878f9e407 SHA512 a10d0232cf20be4a44701b9c225e0f9240f03a27f9d9f46fc426f19c2b2dfa469f61b60fdc78d1d2f710a7c077b7d89e4b77b3015af0917f31524651566972e4 WHIRLPOOL 64d6164d03e5f642f024e3439ea86c95101f27caa4dd85aa913114663b20c103e1157581f902a60788c61fba5fe59719ef9084bf51b103a2eeeae0016473692e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlVJ9ZMACgkQVxOqA9G7/aAF7wD9EgqgkSVD11yxezrgjnuq+ned
-v74IsYArNT7sTlsy064A/3Zy7oyl+7z3Ts9+JSCPv3AYs3UD7MyuvLA/fPsWpzUP
-=lGGc
+iF4EAREIAAYFAlVKDPIACgkQVxOqA9G7/aC4/QD/cpg4qeKfkvjw/7NGQaH3+jRJ
+HbYUFLRUTyZBV8zvl+UA/2vTSdkIZsy+wDaII6d6GOSX6SRu7ic2wtd+o+wlB9VA
+=Q8iu
 -----END PGP SIGNATURE-----
